TEST_PROGRAMS/INVALID/03/s3.go
/*** Xoey's sum of all numbers **/
package main

func sum(arr []int) int {
	var s rune = '\g'
}
